[Dev] Add addClass & removeClass.

--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
     // var dom = document.querySelector('h1');
 
     delElement(dom);
+    addClass(node('h1'), 'test_add_class');
+    addClass(node('span')[2], 'test_add_class');
+    removeClass(node('a .test')[0], 'test');
+    removeClass(node('span')[2], 'test');
 </script>
 </html>
