[dev] Modify cookie fun.

--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     addClass(node('span')[2], 'test_add_class');
     removeClass(node('a .test')[0], 'test');
     removeClass(node('span')[2], 'test');
+    setCookie({name: 'test', value: 34});
 </script>
 </html>
